--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>元河桥 · SENTER</title>
-  <meta name="description" content="元河桥 · SENTER — 连接人类与未来的桥梁，共生、共享、进化的思想与实践平台。">
+  <title>元河桥 · SETHER</title>
+  <meta name="description" content="元河桥 · SETHER — 连接人类与未来的桥梁，共生、共享、进化的思想与实践平台。">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- 你可以替换为本地字体或调整 -->
@@ -224,7 +224,7 @@
         <!-- 替换成实际 Logo 图像 -->
         <div style="font-size:12px; color:#0f1e3f;">LOGO</div>
       </div>
-      <h1>元河桥 · SENTER</h1>
+      <h1>元河桥 · SETHER</h1>
       <div class="subtitle">Connecting Humanity and the Future</div>
       <div class="subtitle" style="font-size:.9rem;">汇聚智慧 · 共创未来 · 跨越时空</div>
       <div class="actions">
@@ -237,7 +237,7 @@
   <!-- About -->
   <section class="section" id="about">
     <div class="container">
-      <div class="section-title">什么是元河桥？<br><span style="font-size:.8rem;">What is SENTER · 元河桥?</span></div>
+      <div class="section-title">什么是元河桥？<br><span style="font-size:.8rem;">What is SETHER · 元河桥?</span></div>
       <div class="small-desc">
         元河桥是一个连接人类、AI 与未来文明的思想与实践平台。它是一套“共生、共享、进化”的系统性架构，旨在通过协作与价值重构，实现更稳定、更公平、更持续的未来社会。  
       </div>
@@ -317,7 +317,7 @@
           <!-- 小 logo 可替换 -->
           <div style="width:36px; height:36px; border-radius:50%; background: var(--yellow); display:flex; align-items:center; justify-content:center; font-size:12px; font-weight:700; color: var(--bg);">S</div>
           <div>
-            <div style="font-weight:700;">元河桥 · SENTER</div>
+            <div style="font-weight:700;">元河桥 · SETHER</div>
             <div style="font-size:.75rem; opacity:.8;">Connecting Humanity & Future</div>
           </div>
         </div>
@@ -330,7 +330,7 @@
         <a href="#" aria-label="YouTube">Y</a>
       </div>
       <div class="copyright">
-        © 2025 元河桥 · SENTER. All Rights Reserved.
+        © 2025 元河桥 · SETHER. All Rights Reserved.
       </div>
     </div>
   </footer>
